--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,17 @@ button {
 		color: inherit;
 }
 
+@keyframes fade-in-from-top {
+		0% {
+				opacity: 0;
+				transform: translateY(-50px);
+		}
+		100% {
+				opacity: 1;
+				transform: translateY(0);
+		}
+}
+
 .app {
     font-family: 'Lato', sans-serif;
     font-size: 25px;
@@ -39,6 +50,7 @@ button {
 .logo {
 	align-self: center;
 	margin: 0 20px 0 30px;
+	animation: fade-in-from-top 0.5s;
 }
 
 .dd-toggle {
@@ -46,6 +58,7 @@ button {
 	padding: 0 13px;
 	transition: color 0.4s, 
 		background-color 0.4s;
+	animation: fade-in-from-top 0.5s;
 
 	&:focus {
 		outline: none;
