--- a/css/styles.css
+++ b/css/styles.css
@@ -1,75 +1,78 @@
 :root {
-    --white: #fff;
-    --color-primary: #18A0BE;
-    --color-secondary: #622DB9;
-		--color-white-translucent: rgba(255, 255, 255, 0.7);
-		--background-color-translucent: rgba(255, 255, 255, 0.07);
+	--white: #fff;
+	--color-primary: #18A0BE;
+	--color-secondary: #622DB9;
+	--color-white-translucent: rgba(255, 255, 255, 0.7);
+	--background-color-translucent: rgba(255, 255, 255, 0.07);
+	--sidebar-background-color: #10171A;
+	--panel-background-color: #2B363C;
+	--main-background-color: #EDF1F3;
+	--header-height: 55px;
 }
 
 * {
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 button {
-    border: initial;
-    background-color: initial;
-    font-family: inherit;
-		color: inherit;
+	border: initial;
+	background-color: initial;
+	color: inherit;
+	font-family: inherit;
 }
 
 @keyframes fade-in-from-top {
-		0% {
-				opacity: 0;
-				transform: translateY(-50px);
-		}
-		100% {
-				opacity: 1;
-				transform: translateY(0);
-		}
+	0% {
+		transform: translateY(-50px);
+		opacity: 0;
+	}
+
+	100% {
+		transform: translateY(0);
+		opacity: 1;
+	}
 }
 
 .app {
-    font-family: 'Lato', sans-serif;
-    font-size: 25px;
-    color: var(--white);
-    width: 100vw;
-    height: 100vh;
+	width: 100vw;
+	height: 100vh;
+	color: var(--white);
+	font-size: 25px;
+	font-family: 'Lato', sans-serif;
 }
 
 .header {
 	display: flex;
-    background-image: linear-gradient(
-        to right,
-        var(--color-primary),
-        var(--color-secondary)
-    );
-		height: 55px;
+	background-image: linear-gradient(to right,
+			var(--color-primary),
+			var(--color-secondary));
+	height: var(--header-height);
 }
 
 .logo {
 	align-self: center;
-	margin: 0 20px 0 30px;
 	animation: fade-in-from-top 0.5s;
+	margin: 0 20px 0 30px;
 }
 
 .dd-toggle {
-	color: var(--color-white-translucent);
-	padding: 0 13px;
-	transition: color 0.4s, 
-		background-color 0.4s;
 	animation: fade-in-from-top 0.5s;
+	transition: color 0.4s,
+		background-color 0.4s;
+	padding: 0 13px;
+	color: var(--color-white-translucent);
 
 	&:focus {
 		outline: none;
+		background-color: var(--background-color-translucent);
 		color: var(--white);
-    background-color: var(--background-color-translucent);
 	}
 
 	&:hover {
-		color: var(--white);
-    background-color: var(--background-color-translucent);
 		cursor: pointer;
+		background-color: var(--background-color-translucent);
+		color: var(--white);
 	}
 
 	&:nth-of-type(4) {
@@ -84,18 +87,36 @@ button {
 
 }
 
-.dd-toggle__icon {
-
-}
+.dd-toggle__icon {}
 
 .dd-toggle__image {
+	margin-right: 7px;
+	border-radius: 50%;
 	width: 30px;
 	height: 30px;
 	object-fit: cover;
-	border-radius: 50%;
-	margin-right: 7px;
 }
 
-.dd-toggle__text {
+.dd-toggle__text {}
+
+.app__container {
+	display: flex;
+	height: calc(100vh - var(--header-height));
+
+	.sidebar {
+		background-color: var(--sidebar-background-color);
+		width: 75px;
+	}
+
+	.panel {
+		background-color: var(--panel-background-color);
+		width: 350px
+	}
+
+	.main {
+		flex: 1;
+		background-color: var(--main-background-color);
+	}
+
 
 }
