--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,40 @@ button {
 	.sidebar {
 		background-color: var(--sidebar-background-color);
 		width: 75px;
+
+		.menu {
+	
+		}
+
+		.menu__button {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			padding: 19px 0;
+			width: 100%;
+			color: rgba(255, 255, 255, .4);
+		}
+
+		.menu__button--active {
+			background-color: #2B363B;
+			color: var(--white);
+		}
+
+		.menu__button--active::before {
+			background-color: #2B363B;
+			color: var(--white);
+		}
+
+		.menu__icon {
+			margin-bottom: 3px;
+			font-size: 18px;
+		}
+
+		.menu__text {
+			font-weight: 500;
+			font-size: 12px;
+		}
+
 	}
 
 	.panel {
