--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,19 @@ button {
 	}
 }
 
+@keyframes fade-in-from-left {
+	0% {
+		transform: translateX(-50px);
+		opacity: 0;
+	}
+
+	100% {
+		transform: translateX(0);
+		opacity: 1;
+	}
+	
+}
+
 .app {
 	width: 100vw;
 	height: 100vh;
@@ -104,6 +117,8 @@ button {
 	height: calc(100vh - var(--header-height));
 
 	.sidebar {
+		display: flex;
+		flex-direction: column;
 		background-color: var(--sidebar-background-color);
 		width: 75px;
 
@@ -115,19 +130,40 @@ button {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
+			animation: fade-in-from-left 0.5s;
+			transition: all 0.4s;
 			padding: 19px 0;
 			width: 100%;
 			color: rgba(255, 255, 255, .4);
 		}
 
+		.menu__button:hover {
+			cursor: pointer;
+			background-color: #2B363B;
+			color: var(--white);
+		}
+
+		.menu__button:focus {
+			cursor: pointer;
+			background-color: #2B363B;
+			color: var(--white);
+		}
+
 		.menu__button--active {
+			position: relative;
 			background-color: #2B363B;
 			color: var(--white);
 		}
 
 		.menu__button--active::before {
+			position: absolute;
+			top: 0;
+			left: 0;
 			background-color: #2B363B;
-			color: var(--white);
+			background-color: #375BB6;
+			width: 3px;
+			height: 100%;
+			content: '';
 		}
 
 		.menu__icon {
@@ -153,4 +189,16 @@ button {
 	}
 
 
+}
+
+.footer {
+	margin-top: auto;
+	margin-bottom: 20px;
+	transform: rotate(-90deg);
+
+	.copyright {
+		color: rgba(255, 255, 255, .15);
+		font-size: 12px;
+		white-space: nowrap;
+	}
 }
