--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
 }
 
 * {
+	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 }
@@ -45,6 +46,16 @@ button {
 		opacity: 1;
 	}
 	
+}
+
+@keyframes fade-in {
+	0% {
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 1;
+	}
 }
 
 .app {
@@ -180,7 +191,83 @@ button {
 
 	.panel {
 		background-color: var(--panel-background-color);
-		width: 350px
+		padding: 15px 31px;
+		width: 350px;
+
+		.panel__top {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			border-bottom: 1px solid #4B5155;
+			padding-bottom: 12px;
+		}
+
+		.first-heading {
+			font-weight: 400;
+			font-size: 18px;
+		}
+
+		.panel__images {
+			display: flex;
+			flex-wrap: wrap;
+			gap: 8px;
+			padding: 25px 0;
+		}
+
+		.panel__img {
+			border-radius: 7px;
+			width: 140px;
+			height: 140px;
+			object-fit: cover;
+			cursor: pointer;
+			transition: transform 0.4s;
+			animation: fade-in 1s;
+		}
+
+		.panel__img:nth-child(2) {
+			animation: fade-in 1s .1s backwards;
+		}
+
+		.panel__img:nth-child(3) {
+			animation: fade-in 1s .2s backwards;
+		}
+
+		.panel__img:nth-child(4) {
+			animation: fade-in 1s .3s backwards;
+		}
+
+		.panel__img:nth-child(5) {
+			animation: fade-in 1s .4s backwards;
+		}
+
+		.panel__img:hover {
+			transform: scale(1.1);
+		}
+
+		.panel__collapse-icon {
+			cursor: pointer;
+			color: #6B7276;
+		}
+
+		.panel__btn {
+			cursor: pointer;
+			border-radius: 7px;
+			background-color: #333e44;
+			width: 140px;
+			height: 140px;
+			transition: background-color 0.4s;
+			animation: fade-in 1s .5s backwards;
+		}
+
+		.panel__btn:hover, .panel__btn:focus {
+			background-color: #404C52;
+		}
+
+		.panel__upload-icon {
+			color: #21292D;
+			font-size: 25px;
+		}
+
 	}
 
 	.main {
@@ -192,9 +279,9 @@ button {
 }
 
 .footer {
+	transform: rotate(-90deg);
 	margin-top: auto;
 	margin-bottom: 20px;
-	transform: rotate(-90deg);
 
 	.copyright {
 		color: rgba(255, 255, 255, .15);
