--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,13 @@
 :root {
 	--white: #fff;
+	--main-background-color: #EDF1F3;
+	--panel-background-color: #2B363C;
+	--sidebar-background-color: #10171A;
+	--background-color-translucent: rgba(255, 255, 255, 0.07);
+	--header-height: 55px;
 	--color-primary: #18A0BE;
 	--color-secondary: #622DB9;
 	--color-white-translucent: rgba(255, 255, 255, 0.7);
-	--background-color-translucent: rgba(255, 255, 255, 0.07);
-	--sidebar-background-color: #10171A;
-	--panel-background-color: #2B363C;
-	--main-background-color: #EDF1F3;
-	--header-height: 55px;
 }
 
 * {
@@ -17,8 +17,8 @@
 }
 
 button {
-	border: initial;
 	background-color: initial;
+	border: initial;
 	color: inherit;
 	font-family: inherit;
 }
@@ -45,7 +45,7 @@ button {
 		transform: translateX(0);
 		opacity: 1;
 	}
-	
+
 }
 
 @keyframes fade-in {
@@ -59,18 +59,18 @@ button {
 }
 
 .app {
-	width: 100vw;
-	height: 100vh;
 	color: var(--white);
-	font-size: 25px;
 	font-family: 'Lato', sans-serif;
+	font-size: 25px;
+	height: 100vh;
+	width: 100vw;
 }
 
 .header {
-	display: flex;
 	background-image: linear-gradient(to right,
-			var(--color-primary),
-			var(--color-secondary));
+	var(--color-primary),
+	var(--color-secondary));
+	display: flex;
 	height: var(--header-height);
 }
 
@@ -82,21 +82,21 @@ button {
 
 .dd-toggle {
 	animation: fade-in-from-top 0.5s;
-	transition: color 0.4s,
-		background-color 0.4s;
-	padding: 0 13px;
 	color: var(--color-white-translucent);
+	padding: 0 13px;
+	transition: color 0.4s,
+	background-color 0.4s;
 
 	&:focus {
-		outline: none;
 		background-color: var(--background-color-translucent);
 		color: var(--white);
+		outline: none;
 	}
 
 	&:hover {
-		cursor: pointer;
 		background-color: var(--background-color-translucent);
 		color: var(--white);
+		cursor: pointer;
 	}
 
 	&:nth-of-type(4) {
@@ -105,86 +105,88 @@ button {
 	}
 
 	&:last-child {
-		display: inherit;
 		align-items: center;
+		display: inherit;
 	}
 
 }
 
-.dd-toggle__icon {}
-
-.dd-toggle__image {
-	margin-right: 7px;
-	border-radius: 50%;
-	width: 30px;
-	height: 30px;
-	object-fit: cover;
+.dd-toggle__icon {
 }
 
-.dd-toggle__text {}
+.dd-toggle__image {
+	border-radius: 50%;
+	height: 30px;
+	margin-right: 7px;
+	object-fit: cover;
+	width: 30px;
+}
+
+.dd-toggle__text {
+}
 
 .app__container {
 	display: flex;
 	height: calc(100vh - var(--header-height));
 
 	.sidebar {
+		background-color: var(--sidebar-background-color);
 		display: flex;
 		flex-direction: column;
-		background-color: var(--sidebar-background-color);
 		width: 75px;
 
 		.menu {
-	
+
 		}
 
 		.menu__button {
-			display: flex;
-			flex-direction: column;
 			align-items: center;
 			animation: fade-in-from-left 0.5s;
-			transition: all 0.4s;
-			padding: 19px 0;
-			width: 100%;
 			color: rgba(255, 255, 255, .4);
+			display: flex;
+			flex-direction: column;
+			padding: 19px 0;
+			transition: all 0.4s;
+			width: 100%;
 		}
 
 		.menu__button:hover {
-			cursor: pointer;
 			background-color: #2B363B;
 			color: var(--white);
+			cursor: pointer;
 		}
 
 		.menu__button:focus {
-			cursor: pointer;
 			background-color: #2B363B;
 			color: var(--white);
+			cursor: pointer;
 		}
 
 		.menu__button--active {
-			position: relative;
 			background-color: #2B363B;
 			color: var(--white);
+			position: relative;
 		}
 
 		.menu__button--active::before {
-			position: absolute;
-			top: 0;
-			left: 0;
 			background-color: #2B363B;
 			background-color: #375BB6;
-			width: 3px;
-			height: 100%;
 			content: '';
+			height: 100%;
+			left: 0;
+			position: absolute;
+			top: 0;
+			width: 3px;
 		}
 
 		.menu__icon {
-			margin-bottom: 3px;
 			font-size: 18px;
+			margin-bottom: 3px;
 		}
 
 		.menu__text {
-			font-weight: 500;
 			font-size: 12px;
+			font-weight: 500;
 		}
 
 	}
@@ -195,16 +197,16 @@ button {
 		width: 350px;
 
 		.panel__top {
-			display: flex;
-			justify-content: space-between;
 			align-items: center;
 			border-bottom: 1px solid #4B5155;
+			display: flex;
+			justify-content: space-between;
 			padding-bottom: 12px;
 		}
 
 		.first-heading {
-			font-weight: 400;
 			font-size: 18px;
+			font-weight: 400;
 		}
 
 		.panel__images {
@@ -216,12 +218,12 @@ button {
 
 		.panel__img {
 			animation: fade-in 1s;
-			transition: transform 0.4s;
-			cursor: pointer;
 			border-radius: 7px;
-			width: 140px;
+			cursor: pointer;
 			height: 140px;
 			object-fit: cover;
+			transition: transform 0.4s;
+			width: 140px;
 		}
 
 		.panel__img:nth-child(2) {
@@ -245,18 +247,18 @@ button {
 		}
 
 		.panel__collapse-icon {
-			cursor: pointer;
 			color: #6B7276;
+			cursor: pointer;
 		}
 
 		.panel__btn {
 			animation: fade-in 1s .5s backwards;
-			transition: background-color 0.4s;
-			cursor: pointer;
-			border-radius: 7px;
 			background-color: #333e44;
-			width: 140px;
+			border-radius: 7px;
+			cursor: pointer;
 			height: 140px;
+			transition: background-color 0.4s;
+			width: 140px;
 		}
 
 		.panel__btn:hover, .panel__btn:focus {
@@ -271,24 +273,24 @@ button {
 	}
 
 	.main {
-		flex: 1;
 		background-color: var(--main-background-color);
+		flex: 1;
 	}
 
 	.info-bar {
+		align-items: center;
+		background-color: var(--white);
+		border: 1px solid #D6DDE1;
 		display: flex;
 		flex-direction: row;
-		border: 1px solid #D6DDE1;
-		background-color: var(--white);
-		padding: 0 30px;
 		height: 50px;
-		align-items: center;
 		justify-content: space-between;
+		padding: 0 30px;
 	}
 
 	.breadcrumbs {
-		display: flex;
 		align-items: center;
+		display: flex;
 		font-size: 12px;
 		letter-spacing: 0.5px;
 		text-transform: uppercase;
@@ -304,20 +306,20 @@ button {
 		}
 
 		.breadcrumbs__icon {
-			margin: 0 13px;
 			color: #A6ADB1;
+			margin: 0 13px;
 		}
 
 	}
 
 	.button {
-		 transition: background-color 0.4s;
-		 border-radius: 500px;
-		 background-color: #375BB6;
-		 padding: 8px 20px;
-		 font-size: 11px;
-		 letter-spacing: 1px;
-		 text-transform: uppercase;
+		background-color: #375BB6;
+		border-radius: 500px;
+		font-size: 11px;
+		letter-spacing: 1px;
+		padding: 8px 20px;
+		text-transform: uppercase;
+		transition: background-color 0.4s;
 	}
 
 	.button:hover {
@@ -328,9 +330,9 @@ button {
 }
 
 .footer {
-	transform: rotate(-90deg);
-	margin-top: auto;
 	margin-bottom: 20px;
+	margin-top: auto;
+	transform: rotate(-90deg);
 
 	.copyright {
 		color: rgba(255, 255, 255, .15);
@@ -338,3 +340,64 @@ button {
 		white-space: nowrap;
 	}
 }
+
+.artboard {
+	display: flex;
+	justify-content: center;
+}
+
+.canvas {
+	height: 57.5vh;
+	position: relative;
+	width: 48.6vw;
+	border: 1px solid var(--white);
+	border-radius: 3px;
+
+	.canvas__bg-img {
+		height: 100%;
+		object-fit: cover;
+		opacity: .15;
+		width: 100%;
+	}
+
+	.canvas__fg-img {
+		border-radius: 3px;
+		height: 75%;
+		left: 50%;
+		object-fit: cover;
+		position: absolute;
+		top: 50%;
+		transform: translate(-50%, -50%);
+		width: 78%;
+		border: 1px solid var(--white);
+	}
+
+	.canvas__circle {
+	}
+
+	.canvas__circle:nth-of-type(1) {
+	}
+
+	.canvas__circle:nth-of-type(2) {
+	}
+
+	.canvas__circle:nth-of-type(3) {
+	}
+
+	.canvas__circle:nth-of-type(4) {
+	}
+
+}
+
+.tools {
+	height: 57.5vh;
+	display: flex;
+}
+
+.tool {
+
+	.tool__icon {
+	}
+
+}
+
