--- a/css/styles.css
+++ b/css/styles.css
@@ -17,8 +17,8 @@
 }
 
 button {
-	background-color: initial;
 	border: initial;
+	background-color: initial;
 	color: inherit;
 	font-family: inherit;
 }
@@ -58,19 +58,45 @@ button {
 	}
 }
 
+@keyframes fade-in-from-right {
+	0% {
+		transform: translateX(50px);
+		opacity: 0;
+	}
+
+	100% {
+		transform: translateX(0);
+		opacity: 1;
+	}
+
+}
+
+@keyframes make-smaller {
+	0% {
+		width: 100%;
+		height: 100%;
+	}
+
+	100% {
+		width: 78%;
+    height: 75%;
+	}
+
+}
+
 .app {
-	color: var(--white);
-	font-family: 'Lato', sans-serif;
-	font-size: 25px;
-	height: 100vh;
 	width: 100vw;
+	height: 100vh;
+	color: var(--white);
+	font-size: 25px;
+	font-family: 'Lato', sans-serif;
 }
 
 .header {
+	display: flex;
 	background-image: linear-gradient(to right,
 	var(--color-primary),
 	var(--color-secondary));
-	display: flex;
 	height: var(--header-height);
 }
 
@@ -82,21 +108,21 @@ button {
 
 .dd-toggle {
 	animation: fade-in-from-top 0.5s;
-	color: var(--color-white-translucent);
-	padding: 0 13px;
 	transition: color 0.4s,
 	background-color 0.4s;
+	padding: 0 13px;
+	color: var(--color-white-translucent);
 
 	&:focus {
+		outline: none;
 		background-color: var(--background-color-translucent);
 		color: var(--white);
-		outline: none;
 	}
 
 	&:hover {
+		cursor: pointer;
 		background-color: var(--background-color-translucent);
 		color: var(--white);
-		cursor: pointer;
 	}
 
 	&:nth-of-type(4) {
@@ -105,8 +131,8 @@ button {
 	}
 
 	&:last-child {
-		align-items: center;
 		display: inherit;
+		align-items: center;
 	}
 
 }
@@ -115,11 +141,11 @@ button {
 }
 
 .dd-toggle__image {
-	border-radius: 50%;
-	height: 30px;
 	margin-right: 7px;
-	object-fit: cover;
+	border-radius: 50%;
 	width: 30px;
+	height: 30px;
+	object-fit: cover;
 }
 
 .dd-toggle__text {
@@ -130,9 +156,9 @@ button {
 	height: calc(100vh - var(--header-height));
 
 	.sidebar {
-		background-color: var(--sidebar-background-color);
 		display: flex;
 		flex-direction: column;
+		background-color: var(--sidebar-background-color);
 		width: 75px;
 
 		.menu {
@@ -140,52 +166,52 @@ button {
 		}
 
 		.menu__button {
-			align-items: center;
-			animation: fade-in-from-left 0.5s;
-			color: rgba(255, 255, 255, .4);
 			display: flex;
 			flex-direction: column;
-			padding: 19px 0;
+			align-items: center;
+			animation: fade-in-from-left 0.5s;
 			transition: all 0.4s;
+			padding: 19px 0;
 			width: 100%;
+			color: rgba(255, 255, 255, .4);
 		}
 
 		.menu__button:hover {
+			cursor: pointer;
 			background-color: #2B363B;
 			color: var(--white);
-			cursor: pointer;
 		}
 
 		.menu__button:focus {
+			cursor: pointer;
 			background-color: #2B363B;
 			color: var(--white);
-			cursor: pointer;
 		}
 
 		.menu__button--active {
+			position: relative;
 			background-color: #2B363B;
 			color: var(--white);
-			position: relative;
 		}
 
 		.menu__button--active::before {
-			background-color: #375BB6;
-			content: '';
-			height: 100%;
-			left: 0;
 			position: absolute;
 			top: 0;
+			left: 0;
+			background-color: #375BB6;
 			width: 3px;
+			height: 100%;
+			content: '';
 		}
 
 		.menu__icon {
-			font-size: 18px;
 			margin-bottom: 3px;
+			font-size: 18px;
 		}
 
 		.menu__text {
-			font-size: 12px;
 			font-weight: 500;
+			font-size: 12px;
 		}
 
 	}
@@ -196,16 +222,16 @@ button {
 		width: 350px;
 
 		.panel__top {
-			align-items: center;
-			border-bottom: 1px solid #4B5155;
 			display: flex;
 			justify-content: space-between;
+			align-items: center;
+			border-bottom: 1px solid #4B5155;
 			padding-bottom: 12px;
 		}
 
 		.first-heading {
-			font-size: 18px;
 			font-weight: 400;
+			font-size: 18px;
 		}
 
 		.panel__images {
@@ -217,12 +243,12 @@ button {
 
 		.panel__img {
 			animation: fade-in 1s;
-			border-radius: 7px;
+			transition: transform 0.4s;
 			cursor: pointer;
+			border-radius: 7px;
+			width: 140px;
 			height: 140px;
 			object-fit: cover;
-			transition: transform 0.4s;
-			width: 140px;
 		}
 
 		.panel__img:nth-child(2) {
@@ -246,18 +272,18 @@ button {
 		}
 
 		.panel__collapse-icon {
-			color: #6B7276;
 			cursor: pointer;
+			color: #6B7276;
 		}
 
 		.panel__btn {
 			animation: fade-in 1s .5s backwards;
-			background-color: #333e44;
-			border-radius: 7px;
-			cursor: pointer;
-			height: 140px;
 			transition: background-color 0.4s;
+			cursor: pointer;
+			border-radius: 7px;
+			background-color: #333e44;
 			width: 140px;
+			height: 140px;
 		}
 
 		.panel__btn:hover, .panel__btn:focus {
@@ -272,24 +298,24 @@ button {
 	}
 
 	.main {
-		background-color: var(--main-background-color);
 		flex: 1;
+		background-color: var(--main-background-color);
 	}
 
 	.info-bar {
-		align-items: center;
-		background-color: var(--white);
-		border: 1px solid #D6DDE1;
 		display: flex;
 		flex-direction: row;
-		height: 50px;
 		justify-content: space-between;
+		align-items: center;
+		border: 1px solid #D6DDE1;
+		background-color: var(--white);
 		padding: 0 30px;
+		height: 50px;
 	}
 
 	.breadcrumbs {
-		align-items: center;
 		display: flex;
+		align-items: center;
 		font-size: 12px;
 		letter-spacing: 0.5px;
 		text-transform: uppercase;
@@ -305,20 +331,20 @@ button {
 		}
 
 		.breadcrumbs__icon {
-			color: #A6ADB1;
 			margin: 0 13px;
+			color: #A6ADB1;
 		}
 
 	}
 
 	.button {
-		background-color: #375BB6;
+		transition: background-color 0.4s;
 		border-radius: 500px;
+		background-color: #375BB6;
+		padding: 8px 20px;
 		font-size: 11px;
 		letter-spacing: 1px;
-		padding: 8px 20px;
 		text-transform: uppercase;
-		transition: background-color 0.4s;
 	}
 
 	.button:hover {
@@ -329,9 +355,9 @@ button {
 }
 
 .footer {
-	margin-bottom: 20px;
-	margin-top: auto;
 	transform: rotate(-90deg);
+	margin-top: auto;
+	margin-bottom: 20px;
 
 	.copyright {
 		color: rgba(255, 255, 255, .15);
@@ -342,61 +368,108 @@ button {
 
 .artboard {
 	display: flex;
+	column-gap: 20px;
 	justify-content: center;
+	align-items: center;
+	margin-top: -25px;
+	height: calc(100vh - 50px - 55px);
 }
 
 .canvas {
-	height: 57.5vh;
 	position: relative;
-	width: 48.6vw;
 	border: 1px solid var(--white);
 	border-radius: 3px;
+	width: 48.6vw;
+	height: 57.5vh;
 
 	.canvas__bg-img {
-		height: 100%;
-		object-fit: cover;
 		opacity: .15;
 		width: 100%;
+		height: 100%;
+		object-fit: cover;
 	}
 
 	.canvas__fg-img {
-		border-radius: 3px;
-		height: 75%;
-		left: 50%;
-		object-fit: cover;
 		position: absolute;
 		top: 50%;
+		left: 50%;
 		transform: translate(-50%, -50%);
-		width: 78%;
+		animation: make-smaller 1s 0.2s backwards;
+		cursor: grab;
 		border: 1px solid var(--white);
+		border-radius: 3px;
+		width: 78%;
+		height: 75%;
+		object-fit: cover;
 	}
 
 	.canvas__circle {
+		position: absolute;
+		animation: fade-in 1s 1s backwards;
+		border-radius: 50%;
+		background-color: var(--white);
+		width: 15px;
+		height: 15px;
 	}
 
 	.canvas__circle:nth-of-type(1) {
+		top: 11.5%;
+		left: 10.4%;
+		cursor: nw-resize;
 	}
 
 	.canvas__circle:nth-of-type(2) {
+		top: 11.5%;
+		right: 10.4%;
+		cursor: ne-resize;
 	}
 
 	.canvas__circle:nth-of-type(3) {
+		bottom: 11.5%;
+		left: 10.4%;
+		cursor: sw-resize;
 	}
 
 	.canvas__circle:nth-of-type(4) {
+		right: 10.4%;
+		bottom: 11.5%;
+		cursor: se-resize;
 	}
 
 }
 
 .tools {
-	height: 57.5vh;
 	display: flex;
+	flex-direction: column;
+	height: 57.5vh;
 }
 
 .tool {
-
-	.tool__icon {
-	}
-
+	row-gap: 5px;
+	animation: fade-in-from-right 0.5s;
+	transition: all .4s;
+	cursor: pointer;
+	border-radius: 8px;
+	background-color: #E1E6E9;
+	width: 44px;
+	height: 44px;
+	color: #404446;
 }
 
+.tool__icon {
+}
+
+
+.tool:last-child {
+	margin-top: auto;
+}
+
+.tool:hover, .tool:focus {
+	background-color: #2B363B;
+	color: var(--white);
+}
+
+.tool--active {
+	background-color: #2B363B;
+	color: var(--white);
+}
