--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,6 @@ button {
 		transform: translateX(0);
 		opacity: 1;
 	}
-
 }
 
 @keyframes fade-in {
@@ -68,7 +67,6 @@ button {
 		transform: translateX(0);
 		opacity: 1;
 	}
-
 }
 
 @keyframes make-smaller {
@@ -79,9 +77,8 @@ button {
 
 	100% {
 		width: 78%;
-    height: 75%;
+		height: 75%;
 	}
-
 }
 
 .app {
@@ -94,9 +91,7 @@ button {
 
 .header {
 	display: flex;
-	background-image: linear-gradient(to right,
-	var(--color-primary),
-	var(--color-secondary));
+	background-image: linear-gradient(to right, var(--color-primary), var(--color-secondary));
 	height: var(--header-height);
 }
 
@@ -108,37 +103,34 @@ button {
 
 .dd-toggle {
 	animation: fade-in-from-top 0.5s;
-	transition: color 0.4s,
-	background-color 0.4s;
+	transition: color 0.4s, background-color 0.4s;
 	padding: 0 13px;
 	color: var(--color-white-translucent);
-
-	&:focus {
-		outline: none;
-		background-color: var(--background-color-translucent);
-		color: var(--white);
-	}
-
-	&:hover {
-		cursor: pointer;
-		background-color: var(--background-color-translucent);
-		color: var(--white);
-	}
-
-	&:nth-of-type(4) {
-		justify-self: center;
-		margin-left: auto;
-	}
-
-	&:last-child {
-		display: inherit;
-		align-items: center;
-	}
-
 }
 
-.dd-toggle__icon {
+.dd-toggle:focus {
+	outline: none;
+	background-color: var(--background-color-translucent);
+	color: var(--white);
 }
+
+.dd-toggle:hover {
+	cursor: pointer;
+	background-color: var(--background-color-translucent);
+	color: var(--white);
+}
+
+.dd-toggle:nth-of-type(4) {
+	justify-self: center;
+	margin-left: auto;
+}
+
+.dd-toggle:last-child {
+	display: inherit;
+	align-items: center;
+}
+
+.dd-toggle__icon {}
 
 .dd-toggle__image {
 	margin-right: 7px;
@@ -148,222 +140,215 @@ button {
 	object-fit: cover;
 }
 
-.dd-toggle__text {
-}
+.dd-toggle__text {}
 
 .app__container {
 	display: flex;
 	height: calc(100vh - var(--header-height));
+}
 
-	.sidebar {
-		display: flex;
-		flex-direction: column;
-		background-color: var(--sidebar-background-color);
-		width: 75px;
+.sidebar {
+	display: flex;
+	flex-direction: column;
+	background-color: var(--sidebar-background-color);
+	width: 75px;
+}
 
-		.menu {
+.menu {}
 
-		}
+.menu__button {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	animation: fade-in-from-left 0.5s;
+	transition: all 0.4s;
+	padding: 19px 0;
+	width: 100%;
+	color: rgba(255, 255, 255, .4);
+}
 
-		.menu__button {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			animation: fade-in-from-left 0.5s;
-			transition: all 0.4s;
-			padding: 19px 0;
-			width: 100%;
-			color: rgba(255, 255, 255, .4);
-		}
+.menu__button:hover {
+	cursor: pointer;
+	background-color: #2B363B;
+	color: var(--white);
+}
 
-		.menu__button:hover {
-			cursor: pointer;
-			background-color: #2B363B;
-			color: var(--white);
-		}
+.menu__button:focus {
+	cursor: pointer;
+	background-color: #2B363B;
+	color: var(--white);
+}
 
-		.menu__button:focus {
-			cursor: pointer;
-			background-color: #2B363B;
-			color: var(--white);
-		}
+.menu__button--active {
+	position: relative;
+	background-color: #2B363B;
+	color: var(--white);
+}
 
-		.menu__button--active {
-			position: relative;
-			background-color: #2B363B;
-			color: var(--white);
-		}
+.menu__button--active::before {
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-color: #375BB6;
+	width: 3px;
+	height: 100%;
+	content: '';
+}
 
-		.menu__button--active::before {
-			position: absolute;
-			top: 0;
-			left: 0;
-			background-color: #375BB6;
-			width: 3px;
-			height: 100%;
-			content: '';
-		}
+.menu__icon {
+	margin-bottom: 3px;
+	font-size: 18px;
+}
 
-		.menu__icon {
-			margin-bottom: 3px;
-			font-size: 18px;
-		}
+.menu__text {
+	font-weight: 500;
+	font-size: 12px;
+}
 
-		.menu__text {
-			font-weight: 500;
-			font-size: 12px;
-		}
+.panel {
+	background-color: var(--panel-background-color);
+	padding: 15px 31px;
+	width: 350px;
+}
 
-	}
+.panel__top {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	border-bottom: 1px solid #4B5155;
+	padding-bottom: 12px;
+}
 
-	.panel {
-		background-color: var(--panel-background-color);
-		padding: 15px 31px;
-		width: 350px;
+.first-heading {
+	font-weight: 400;
+	font-size: 18px;
+}
 
-		.panel__top {
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			border-bottom: 1px solid #4B5155;
-			padding-bottom: 12px;
-		}
+.panel__images {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 8px;
+	padding: 25px 0;
+}
 
-		.first-heading {
-			font-weight: 400;
-			font-size: 18px;
-		}
+.panel__img {
+	animation: fade-in 1s;
+	transition: transform 0.4s;
+	cursor: pointer;
+	border-radius: 7px;
+	width: 140px;
+	height: 140px;
+	object-fit: cover;
+}
 
-		.panel__images {
-			display: flex;
-			flex-wrap: wrap;
-			gap: 8px;
-			padding: 25px 0;
-		}
+.panel__img:nth-child(2) {
+	animation: fade-in 1s .1s backwards;
+}
 
-		.panel__img {
-			animation: fade-in 1s;
-			transition: transform 0.4s;
-			cursor: pointer;
-			border-radius: 7px;
-			width: 140px;
-			height: 140px;
-			object-fit: cover;
-		}
+.panel__img:nth-child(3) {
+	animation: fade-in 1s .2s backwards;
+}
 
-		.panel__img:nth-child(2) {
-			animation: fade-in 1s .1s backwards;
-		}
+.panel__img:nth-child(4) {
+	animation: fade-in 1s .3s backwards;
+}
 
-		.panel__img:nth-child(3) {
-			animation: fade-in 1s .2s backwards;
-		}
+.panel__img:nth-child(5) {
+	animation: fade-in 1s .4s backwards;
+}
 
-		.panel__img:nth-child(4) {
-			animation: fade-in 1s .3s backwards;
-		}
+.panel__img:hover {
+	transform: scale(1.1);
+}
 
-		.panel__img:nth-child(5) {
-			animation: fade-in 1s .4s backwards;
-		}
+.panel__collapse-icon {
+	cursor: pointer;
+	color: #6B7276;
+}
 
-		.panel__img:hover {
-			transform: scale(1.1);
-		}
+.panel__btn {
+	animation: fade-in 1s .5s backwards;
+	transition: background-color 0.4s;
+	cursor: pointer;
+	border-radius: 7px;
+	background-color: #333e44;
+	width: 140px;
+	height: 140px;
+}
 
-		.panel__collapse-icon {
-			cursor: pointer;
-			color: #6B7276;
-		}
+.panel__btn:hover,
+.panel__btn:focus {
+	background-color: #404C52;
+}
 
-		.panel__btn {
-			animation: fade-in 1s .5s backwards;
-			transition: background-color 0.4s;
-			cursor: pointer;
-			border-radius: 7px;
-			background-color: #333e44;
-			width: 140px;
-			height: 140px;
-		}
+.panel__upload-icon {
+	color: #21292D;
+	font-size: 25px;
+}
 
-		.panel__btn:hover, .panel__btn:focus {
-			background-color: #404C52;
-		}
+.main {
+	flex: 1;
+	background-color: var(--main-background-color);
+}
 
-		.panel__upload-icon {
-			color: #21292D;
-			font-size: 25px;
-		}
+.info-bar {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	border: 1px solid #D6DDE1;
+	background-color: var(--white);
+	padding: 0 30px;
+	height: 50px;
+}
 
-	}
+.breadcrumbs {
+	display: flex;
+	align-items: center;
+	font-size: 12px;
+	letter-spacing: 0.5px;
+	text-transform: uppercase;
+}
 
-	.main {
-		flex: 1;
-		background-color: var(--main-background-color);
-	}
+.breadcrumbs__link {
+	color: #A6ADB1;
+	text-decoration: none;
+}
 
-	.info-bar {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		align-items: center;
-		border: 1px solid #D6DDE1;
-		background-color: var(--white);
-		padding: 0 30px;
-		height: 50px;
-	}
+.breadcrumbs__name {
+	color: #2E3335;
+	font-weight: 500;
+}
 
-	.breadcrumbs {
-		display: flex;
-		align-items: center;
-		font-size: 12px;
-		letter-spacing: 0.5px;
-		text-transform: uppercase;
+.breadcrumbs__icon {
+	margin: 0 13px;
+	color: #A6ADB1;
+}
 
-		.breadcrumbs__link {
-			color: #A6ADB1;
-			text-decoration: none;
-		}
+.button {
+	transition: background-color 0.4s;
+	border-radius: 500px;
+	background-color: #375BB6;
+	padding: 8px 20px;
+	font-size: 11px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+}
 
-		.breadcrumbs__name {
-			color: #2E3335;
-			font-weight: 500;
-		}
-
-		.breadcrumbs__icon {
-			margin: 0 13px;
-			color: #A6ADB1;
-		}
-
-	}
-
-	.button {
-		transition: background-color 0.4s;
-		border-radius: 500px;
-		background-color: #375BB6;
-		padding: 8px 20px;
-		font-size: 11px;
-		letter-spacing: 1px;
-		text-transform: uppercase;
-	}
-
-	.button:hover {
-		background-color: #2d4a93;
-	}
-
-
+.button:hover {
+	background-color: #2d4a93;
 }
 
 .footer {
 	transform: rotate(-90deg);
 	margin-top: auto;
 	margin-bottom: 20px;
+}
 
-	.copyright {
-		color: rgba(255, 255, 255, .15);
-		font-size: 12px;
-		white-space: nowrap;
-	}
+.copyright {
+	color: rgba(255, 255, 255, .15);
+	font-size: 12px;
+	white-space: nowrap;
 }
 
 .artboard {
@@ -381,61 +366,60 @@ button {
 	border-radius: 3px;
 	width: 48.6vw;
 	height: 57.5vh;
+}
 
-	.canvas__bg-img {
-		opacity: .15;
-		width: 100%;
-		height: 100%;
-		object-fit: cover;
-	}
+.canvas__bg-img {
+	opacity: .15;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
 
-	.canvas__fg-img {
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		animation: make-smaller 1s 0.2s backwards;
-		cursor: grab;
-		border: 1px solid var(--white);
-		border-radius: 3px;
-		width: 78%;
-		height: 75%;
-		object-fit: cover;
-	}
+.canvas__fg-img {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	animation: make-smaller 1s 0.2s backwards;
+	cursor: grab;
+	border: 1px solid var(--white);
+	border-radius: 3px;
+	width: 78%;
+	height: 75%;
+	object-fit: cover;
+}
 
-	.canvas__circle {
-		position: absolute;
-		animation: fade-in 1s 1s backwards;
-		border-radius: 50%;
-		background-color: var(--white);
-		width: 15px;
-		height: 15px;
-	}
+.canvas__circle {
+	position: absolute;
+	animation: fade-in 1s 1s backwards;
+	border-radius: 50%;
+	background-color: var(--white);
+	width: 15px;
+	height: 15px;
+}
 
-	.canvas__circle:nth-of-type(1) {
-		top: 11.5%;
-		left: 10.4%;
-		cursor: nw-resize;
-	}
+.canvas__circle:nth-of-type(1) {
+	top: 11.5%;
+	left: 10.4%;
+	cursor: nw-resize;
+}
 
-	.canvas__circle:nth-of-type(2) {
-		top: 11.5%;
-		right: 10.4%;
-		cursor: ne-resize;
-	}
+.canvas__circle:nth-of-type(2) {
+	top: 11.5%;
+	right: 10.4%;
+	cursor: ne-resize;
+}
 
-	.canvas__circle:nth-of-type(3) {
-		bottom: 11.5%;
-		left: 10.4%;
-		cursor: sw-resize;
-	}
+.canvas__circle:nth-of-type(3) {
+	bottom: 11.5%;
+	left: 10.4%;
+	cursor: sw-resize;
+}
 
-	.canvas__circle:nth-of-type(4) {
-		right: 10.4%;
-		bottom: 11.5%;
-		cursor: se-resize;
-	}
-
+.canvas__circle:nth-of-type(4) {
+	right: 10.4%;
+	bottom: 11.5%;
+	cursor: se-resize;
 }
 
 .tools {
@@ -456,15 +440,14 @@ button {
 	color: #404446;
 }
 
-.tool__icon {
-}
-
+.tool__icon {}
 
 .tool:last-child {
 	margin-top: auto;
 }
 
-.tool:hover, .tool:focus {
+.tool:hover,
+.tool:focus {
 	background-color: #2B363B;
 	color: var(--white);
 }
@@ -472,4 +455,119 @@ button {
 .tool--active {
 	background-color: #2B363B;
 	color: var(--white);
+}
+
+@media (max-width: 1200px) {
+	.panel {
+		display: none;
+	}
+
+	.canvas {
+		width: 67vw;
+	}
+}
+
+@media (max-width: 1000px) {
+
+	.app__container {
+		height: initial;
+		min-height: 100%;
+	}
+
+	.sidebar {
+		display: none;
+	}
+
+	.artboard {
+		padding: 50px 20px;
+		margin-top: 0;
+		height: initial;
+	}
+
+	.info-bar {
+		padding: 0 20px;
+	}
+
+	.canvas {
+		width: 100%;
+		height: 500px;
+	}
+
+	.tools {
+		height: 500px;
+	}
+}
+
+@media (max-width: 500px) {
+
+	.dd-toggle:nth-of-type(1),
+	.dd-toggle:nth-of-type(2),
+	.dd-toggle:nth-of-type(3) {
+		display: none;
+	}
+
+	.artboard {
+		flex-direction: column;
+	}
+
+	.canvas {
+		order: 2;
+		height: 450px;
+	}
+
+	.canvas__circle:nth-of-type(1) {
+		top: 11.5%;
+		left: 9.8%;
+	}
+
+	.canvas__circle:nth-of-type(2) {
+		top: 11.5%;
+		left: 9.8%;
+	}
+
+	.canvas__circle:nth-of-type(3) {
+		bottom: 11.5%;
+		right: 9.8%;
+	}
+
+	.canvas__circle:nth-of-type(4) {
+		top: 11.5%;
+		right: 9.8%;
+	}
+
+	.tools {
+		flex-direction: row;
+		column-gap: 5px;
+		order: 1;
+		height: initial;
+		margin-bottom: 15px;
+		align-self: flex-start;
+	}
+
+	.tool:last-child {
+		margin-top: 0;
+	}
+
+}
+
+@media (max-width: 440px) {
+
+	.header {
+		justify-content: space-between;
+	}
+
+	.dd-toggle:nth-of-type(4),
+	.dd-toggle:nth-of-type(5) {
+		display: none;
+	}
+
+	.breadcrumbs__link,
+	.breadcrumbs__icon {
+		display: none !important;
+	}
+
+	.canvas {
+		height: 400px;
+	}
+	
 }
